feat: update db connection

--- a/.env
+++ b/.env
@@ -1,10 +1,14 @@
 APP_ENV=dev
 APP_DEBUG=true
 
+# Docker user configuration
+UID=569177054
+GID=290727152
+
 # Database configuration
 DB_DRIVER=mysql
-DB_HOST=db
-DB_NAME=yii3_demo
-DB_USER=yii3
-DB_PASSWORD=yii3_password
+DB_HOST=localhost
+DB_NAME=yii3_db
+DB_USER=root
+DB_PASSWORD=root123qwe
 DB_CHARSET=utf8mb4
