--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,22 +9,22 @@ services:
       - .:/app
     ports:
       - "8080:8080"
-    depends_on:
-      - db
+    # depends_on:
+    #   - db
     command: php ./yii serve 0.0.0.0
 
-  db:
-    container_name: yii3_mysql
-    image: mysql:8.0
-    environment:
-      MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: yii3_demo
-      MYSQL_USER: yii3
-      MYSQL_PASSWORD: yii3_password
-    ports:
-      - "3306:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
+  # db:
+  #   container_name: yii3_mysql
+  #   image: mysql:8.0
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: secret
+  #     MYSQL_DATABASE: yii3_demo
+  #     MYSQL_USER: yii3
+  #     MYSQL_PASSWORD: yii3_password
+  #   ports:
+  #     - "3306:3306"
+  #   volumes:
+  #     - mysql_data:/var/lib/mysql
 
 volumes:
   mysql_data:
