--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ GID=290727152
 
 # Database configuration
 DB_DRIVER=mysql
-DB_HOST=localhost
+DB_HOST=host.docker.internal
 DB_NAME=yii3_db
 DB_USER=root
 DB_PASSWORD=root123qwe
